rekenmachine WIP: input OK, still need result + optional input restriction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,5 +49,11 @@ Met hashtag (#) variabelen:<br>
 
 <h5>Reactive</h5>
 <input [formControl]="reactiveInput"> {{reactiveInput.value}}
+<br><br>
+<a [routerLink]="['/rekenmachine']">Rekenmachine</a>
+
 
 <router-outlet></router-outlet>
+
+
+
