--- a/src/app/rekenmachine/rekenmachine.component.html
+++ b/src/app/rekenmachine/rekenmachine.component.html
@@ -21,5 +21,5 @@
 <button (click)="onClick('-')">-</button>
 <button (click)="onClick('*')">*</button>
 <button (click)="onClick('/')">/</button>
-<button>=</button>
+<button (click)="onCalcResult()">=</button>
 
